# Horizon-Sovereign-Stack-HSS-

./: README.md  env.example
01-Xythum-Liquidity/: Cargo.toml  README.md
01-Xythum-Liquidity/src/: lib.rs
01-Xythum-Liquidity/src/src/: test.rs
02-DRI-Index/: Cargo.toml  readme.md
02-DRI-Index/src/: lib.rs
03-Sovereign-Settlement/: readme.md
03-Sovereign-Settlement/p2p-node/: index.js
03-Sovereign-Settlement/p2p-node/contracts/src/: lib.rs
04-HashKey-HSP-Bridge/contracts/: HSPBridgeReceiver.sol  README.md
04-HashKey-HSP-Bridge/contracts/hsp-adapter/: relayer.js
